fix `findIcon(path, ClassLoader)`
GitOrigin-RevId: fd35f17f9ecb137afa677228244693abc35e74c0