@@ -25,7 +25,9 @@ import java.util.Map;
 import java.util.Set;
 import java.util.function.Function;
 
-public class TypePresentationServiceImpl extends TypePresentationService {
+public final class TypePresentationServiceImpl extends TypePresentationService {
+  private static final ExtensionPointName<TypeIconEP> TYPE_ICON_EP_NAME = new ExtensionPointName<>("com.intellij.typeIcon");
+
   private static final ExtensionPointName<PresentationProvider<?>> PROVIDER_EP = new ExtensionPointName<>("com.intellij.presentationProvider");
   private static final ClassExtension<PresentationProvider<?>> PROVIDERS = new ClassExtension<>(PROVIDER_EP.getName());
 
@@ -45,9 +47,8 @@ public class TypePresentationServiceImpl extends TypePresentationService {
     return findFirst(type, template -> template.getIcon(o, 0));
   }
 
-  @Nullable
   @Override
-  public String getTypePresentableName(Class type) {
+  public @NotNull String getTypePresentableName(Class type) {
     String typeName = findFirst(type, template -> template.getTypeName());
     return typeName != null ? typeName : getDefaultTypeName(type);
   }
@@ -77,13 +78,13 @@ public class TypePresentationServiceImpl extends TypePresentationService {
   }
 
   public TypePresentationServiceImpl() {
-    for (TypeIconEP ep : TypeIconEP.EP_NAME.getExtensionList()) {
-      myIcons.put(ep.className, ep.getIcon());
+    for (TypeIconEP ep : TYPE_ICON_EP_NAME.getExtensionList()) {
+      myIcons.put(ep.className, ep.lazyIcon);
     }
-    TypeIconEP.EP_NAME.addExtensionPointListener(new ExtensionPointListener<TypeIconEP>() {
+    TYPE_ICON_EP_NAME.addExtensionPointListener(new ExtensionPointListener<>() {
       @Override
       public void extensionAdded(@NotNull TypeIconEP extension, @NotNull PluginDescriptor pluginDescriptor) {
-        myIcons.put(extension.className, extension.getIcon());
+        myIcons.put(extension.className, extension.lazyIcon);
       }
 
       @Override
@@ -95,7 +96,7 @@ public class TypePresentationServiceImpl extends TypePresentationService {
     for (TypeNameEP ep : TypeNameEP.EP_NAME.getExtensionList()) {
       myNames.put(ep.className, ep.getTypeName());
     }
-    TypeNameEP.EP_NAME.addExtensionPointListener(new ExtensionPointListener<TypeNameEP>() {
+    TypeNameEP.EP_NAME.addExtensionPointListener(new ExtensionPointListener<>() {
       @Override
       public void extensionAdded(@NotNull TypeNameEP extension, @NotNull PluginDescriptor pluginDescriptor) {
         myNames.put(extension.className, extension.getTypeName());
@@ -115,46 +116,48 @@ public class TypePresentationServiceImpl extends TypePresentationService {
     });
   }
 
-  @Nullable
-  private PresentationTemplate createPresentationTemplate(Class<?> type) {
+  private @Nullable PresentationTemplate createPresentationTemplate(Class<?> type) {
     Presentation presentation = type.getAnnotation(Presentation.class);
     if (presentation != null) {
       return new AnnotationBasedTemplate(presentation, type);
     }
+
     PresentationProvider<?> provider = PROVIDERS.forClass(type);
     if (provider != null) {
       return new ProviderBasedTemplate(provider);
     }
-    final NullableLazyValue<Icon> icon = myIcons.get(type.getName());
-    final NullableLazyValue<String> typeName = myNames.get(type.getName());
-    if (icon != null || typeName != null) {
-      return new PresentationTemplate() {
-        @Nullable
-        @Override
-        public Icon getIcon(Object o, int flags) {
-          return icon == null ? null : icon.getValue();
-        }
 
-        @Nullable
-        @Override
-        public String getName(Object o) {
-          return null;
-        }
-
-        @Nullable
-        @Override
-        public String getTypeName() {
-          return typeName == null ? null : typeName.getValue();
-        }
-
-        @Nullable
-        @Override
-        public String getTypeName(Object o) {
-          return getTypeName();
-        }
-      };
+    NullableLazyValue<Icon> icon = myIcons.get(type.getName());
+    NullableLazyValue<String> typeName = myNames.get(type.getName());
+    if (icon == null && typeName == null) {
+      return null;
     }
-    return null;
+
+    return new PresentationTemplate() {
+      @Nullable
+      @Override
+      public Icon getIcon(Object o, int flags) {
+        return icon == null ? null : icon.getValue();
+      }
+
+      @Nullable
+      @Override
+      public String getName(Object o) {
+        return null;
+      }
+
+      @Nullable
+      @Override
+      public String getTypeName() {
+        return typeName == null ? null : typeName.getValue();
+      }
+
+      @Nullable
+      @Override
+      public String getTypeName(Object o) {
+        return getTypeName();
+      }
+    };
   }
 
   private final Map<String, NullableLazyValue<Icon>> myIcons = new HashMap<>();
@@ -223,7 +226,7 @@ public class TypePresentationServiceImpl extends TypePresentationService {
   }
 
   @SuppressWarnings("unchecked")
-  private static class AnnotationBasedTemplate extends PresentationProvider<Object> implements PresentationTemplate {
+  private static final class AnnotationBasedTemplate extends PresentationProvider<Object> implements PresentationTemplate {
     private final Presentation myPresentation;
     private final Class<?> myClass;
 
@@ -241,7 +244,9 @@ public class TypePresentationServiceImpl extends TypePresentationService {
     @Nullable
     @Override
     public Icon getIcon(Object o, int flags) {
-      if (o == null) return myIcon.getValue();
+      if (o == null) {
+        return myIcon.getValue();
+      }
       PresentationProvider provider = myPresentationProvider.getValue();
       if (provider == null) {
         return myIcon.getValue();
@@ -277,7 +282,7 @@ public class TypePresentationServiceImpl extends TypePresentationService {
       return namer == null ? null : namer.getName(o);
     }
 
-    private final NullableLazyValue<Icon> myIcon = new NullableLazyValue<Icon>() {
+    private final NullableLazyValue<Icon> myIcon = new NullableLazyValue<>() {
       @Override
       protected Icon compute() {
         if (StringUtil.isEmpty(myPresentation.icon())) return null;
@@ -285,12 +290,12 @@ public class TypePresentationServiceImpl extends TypePresentationService {
       }
     };
 
-    private final NullableLazyValue<PresentationProvider<?>> myPresentationProvider = new NullableLazyValue<PresentationProvider<?>>() {
+    private final NullableLazyValue<PresentationProvider<?>> myPresentationProvider = new NullableLazyValue<>() {
       @Override
       protected PresentationProvider<?> compute() {
         Class<? extends PresentationProvider> aClass = myPresentation.provider();
         try {
-          return aClass == PresentationProvider.class ? null : aClass.newInstance();
+          return aClass == PresentationProvider.class ? null : aClass.getDeclaredConstructor().newInstance();
         }
         catch (Exception e) {
           return null;
